# cli-db

./: Cargo.toml  readme.md
src/: args.rs  lib.rs  main.rs  store.rs
