[package]
name = "cli-db"
version = "0.1.0"
edition = "2021"
authors = ["Max Nordlund"]
description = "A cli tool to store key value pairs into a sqlite database"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
sqlx = { version = "0.8.1", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.38.2", features = ["full"] }
